--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div class="stories-grid">
                 <div class="story-card">
                     <div class="story-header">
-                        <img src="/images/thispersondoesnotexist.webp" alt="João Silva" class="story-avatar">
+                        <img src="images/thispersondoesnotexist.webp" alt="João Silva" class="story-avatar">
                         <div class="story-info">
                             <h3 class="story-name">João Silva</h3>
                             <p class="story-details">42 anos • São Paulo</p>
@@ -266,7 +266,7 @@
 
                 <div class="story-card">
                     <div class="story-header">
-                        <img src="/images/women-40.jpg" alt="Maria Santos" class="story-avatar">
+                        <img src="images/women-40.jpg" alt="Maria Santos" class="story-avatar">
                         <div class="story-info">
                             <h3 class="story-name">Maria Santos</h3>
                             <p class="story-details">38 anos • Rio de
@@ -308,7 +308,7 @@
             <div class="solution-content">
                 <div class="product-showcase">
                     <div class="product-container">
-                        <img src="/images/03-PRODUTO.png" alt="Sonodol" class="product-image" style="width: 17rem;">
+                        <img src="images/03-PRODUTO.png" alt="Sonodol" class="product-image" style="width: 17rem;">
                         <div class="product-badge">NOVO!<br>2025</div>
                     </div>
 
@@ -493,7 +493,7 @@
                 <div class="testimonials-container">
                     <div class="testimonial-card active" id="testimonial-0">
                         <div class="testimonial-header">
-                            <img src="/images/pexels-luizclas-170497-1848565.jpg" alt="Ana Carolina M."
+                            <img src="images/pexels-luizclas-170497-1848565.jpg" alt="Ana Carolina M."
                                 class="testimonial-avatar">
                             <div class="testimonial-info">
                                 <h4 class="testimonial-name">Ana Carolina
@@ -1099,7 +1099,7 @@
                 </div>
 
                 <div class="sunodol-product-image">
-                    <img src="/images/5+2 (2).png" alt="7 Months Treatment" class="sunodol-image">
+                    <img src="images/5+2 (2).png" alt="7 Months Treatment" class="sunodol-image">
                 </div>
 
                 <div class="sunodol-pricing">
@@ -1130,7 +1130,7 @@
                 </div>
 
                 <div class="sunodol-product-image">
-                    <img src="/images/3-+-1 (1).png" alt="4 Months Treatment" class="sunodol-image">
+                    <img src="images/3-+-1 (1).png" alt="4 Months Treatment" class="sunodol-image">
                 </div>
 
                 <div class="sunodol-pricing">
@@ -1161,7 +1161,7 @@
                 </div>
 
                 <div class="sunodol-product-image">
-                    <img src="/images/03-PRODUTO.png" alt="1 Month Treatment" class="sunodol-image">
+                    <img src="images/03-PRODUTO.png" alt="1 Month Treatment" class="sunodol-image">
                 </div>
 
                 <div class="sunodol-pricing">
@@ -1210,7 +1210,7 @@
 
             <div class="guarantee-box">
                 <div class="guarantee-badge">
-                    <img src="/images/garantia-90-dias.webp" alt="90 Dias de Garantia" class="badge-image"
+                    <img src="images/garantia-90-dias.webp" alt="90 Dias de Garantia" class="badge-image"
                         style=" width: 96px; height: 96px;object-fit: contain;">
                     <div class="badge-text">
                         <div class="badge-title">DIAS DE GARANTIA</div>
@@ -1468,7 +1468,7 @@
 
                 <div class="modal-product">
                     <div class="modal-product-image">
-                        <img src="/images/03-PRODUTO.png" alt="1 Frasco SUNODOL" class="modal-image"
+                        <img src="images/03-PRODUTO.png" alt="1 Frasco SUNODOL" class="modal-image"
                             style="width: 18rem;">
                     </div>
 
