Alteracao nos icones e no preco

--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@
                 <div class="sunodol-badge">MAIS VENDIDO</div>
 
                 <div class="sunodol-card-header">
-                    <div class="sunodol-plan-title">7 MESES DE TRATAMENTO</div>
+                    <div class="sunodol-plan-title">8 MESES DE TRATAMENTO</div>
                     <h4 class="sunodol-plan-subtitle">Compre 5 frascos e leve + 03 GRÁTIS + 01 E-BOOK</h4>
                 </div>
 
@@ -1107,9 +1107,9 @@
                     <div class="sunodol-price-highlight">POR APENAS</div>
                     <div class="sunodol-final-price">
                         <span class="sunodol-installment-text">por 12x de </span>
-                        <span class="sunodol-price-value">R$35,79</span>
+                        <span class="sunodol-price-value">R$39,91</span>
                     </div>
-                    <p class="sunodol-cash-price">Ou R$347,90 à vista</p>
+                    <p class="sunodol-cash-price">Ou R$387,90 à vista</p>
                 </div>
 
                 <button class="sunodol-buy-btn"
@@ -1261,7 +1261,7 @@
                     </div>
                     <div class="trust-badge">
                         <div class="badge-icon">
-                            <img src="images/universidade.png" style="width: 5rem;" />
+                            <img src="images/capelo-logo.png" style="width: 5rem;" />
                         </div>
                         <h4 class="badge-name">Testado em Universidades</h4>
                         <p class="badge-description">Validado por Harvard,
@@ -1300,25 +1300,33 @@
                 <h3 class="security-title">Sua Compra é 100% Segura</h3>
                 <div class="security-grid">
                     <div class="security-item">
-                        <div class="security-icon">🔒</div>
+                        <div class="security-icon">
+                            <img src="images/SiteSeguro.png" style="width: 2.6rem;" />
+                        </div>
                         <h4 class="security-name">Pagamento Seguro</h4>
                         <p class="security-description">Criptografia SSL
                             256-bits</p>
                     </div>
                     <div class="security-item">
-                        <div class="security-icon">🚚</div>
+                        <div class="security-icon">
+                             <img src="images/Entrega Garantida.png" style="width: 2.6rem;" />
+                        </div>
                         <h4 class="security-name">Entrega Garantida</h4>
                         <p class="security-description">Receba em 3-7 dias
                             úteis</p>
                     </div>
                     <div class="security-item">
-                        <div class="security-icon">📞</div>
+                        <div class="security-icon">
+                            <img src="images/Suporte 24h.png" style="width: 2.6rem;" />
+                        </div>
                         <h4 class="security-name">Suporte 24h</h4>
                         <p class="security-description">WhatsApp
                             especializado</p>
                     </div>
                     <div class="security-item">
-                        <div class="security-icon">📋</div>
+                        <div class="security-icon">
+                            <img src="images/Nota Fiscal Inclusa.png" style="width: 2.6rem;" />
+                        </div>
                         <h4 class="security-name">Nota Fiscal</h4>
                         <p class="security-description">Produto 100%
                             regularizado</p>
