--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <section class="quiz-section">
         <div class="container">
             <h2 class="section-title">O Que Seu Médico <span class="highlight-danger">NÃO TE CONTOU</span></h2>
-            <p class="section-subtitle">Sobre os Perigos MORTAIS da
+            <p class="section-subtitle" style="color: red;">Sobre os Perigos MORTAIS da
                 Insônia</p>
 
             <div class="quiz-container">
