fix, ajustes precos, nome , descricao

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                             <button class="ingredient-header" onclick="toggleIngredient(0)">
                                 <div class="ingredient-info">
                                     <h4 class="ingredient-name">Magnésio
-                                        Glicinato <span class="ingredient-dose">(400mg)</span></h4>
+                                        Glicinato <span class="ingredient-dose">(100mg)</span></h4>
                                     <p class="ingredient-benefit">Relaxamento
                                         muscular profundo, redução do
                                         cortisol e preparação natural para o
@@ -357,29 +357,30 @@
                             </button>
                             <div class="ingredient-details hidden">
                                 <p><strong>Comprovação Científica:</strong>
-                                    Estudos mostram que o magnésio glicinato
-                                    é 4x mais absorvido que outras formas,
-                                    ativando o sistema nervoso
-                                    parassimpático</p>
+                                    Estudos mostram que o magnésio bisglicinato é altamente biodisponível, sendo melhor
+                                    absorvido pelo organismo, ativando o sistema nervoso parassimpático e promovendo
+                                    relaxamento.</p>
                             </div>
                         </div>
 
                         <div class="ingredient-item">
                             <button class="ingredient-header" onclick="toggleIngredient(1)">
                                 <div class="ingredient-info">
-                                    <h4 class="ingredient-name">L-Teanina
-                                        Premium <span class="ingredient-dose">(200mg)</span></h4>
+                                    <h4 class="ingredient-name">L-Triptofano
+                                        Premium <span class="ingredient-dose">(100mcg)</span></h4>
                                     <p class="ingredient-benefit">Ondas
-                                        cerebrais alfa, tranquilidade mental
-                                        sem sonolência diurna</p>
+                                        Aumento natural de serotonina, melhora do humor e preparação para o sono
+                                        profundo.
+                                    </p>
                                 </div>
                                 <span class="ingredient-toggle">+</span>
                             </button>
                             <div class="ingredient-details hidden">
                                 <p><strong>Comprovação Científica:</strong>
-                                    Aminoácido do chá verde que aumenta GABA
-                                    e serotonina, clinicamente testado para
-                                    reduzir ansiedade em 30 minutos</p>
+                                    O L-Triptofano é um precursor direto da serotonina e da melatonina,
+                                    neurotransmissores essenciais para equilíbrio emocional e regulação do ciclo do
+                                    sono.
+                                </p>
                             </div>
                         </div>
 
@@ -387,7 +388,7 @@
                             <button class="ingredient-header" onclick="toggleIngredient(2)">
                                 <div class="ingredient-info">
                                     <h4 class="ingredient-name">Melatonina
-                                        Microdosada <span class="ingredient-dose">(0.5mg)</span></h4>
+                                        Microdosada <span class="ingredient-dose">(0.21mg)</span></h4>
                                     <p class="ingredient-benefit">Regulação
                                         natural do ciclo circadiano sem
                                         dependência</p>
@@ -405,38 +406,24 @@
                         <div class="ingredient-item">
                             <button class="ingredient-header" onclick="toggleIngredient(3)">
                                 <div class="ingredient-info">
-                                    <h4 class="ingredient-name">5-HTP <span class="ingredient-dose">(100mg)</span></h4>
-                                    <p class="ingredient-benefit">Aumento
-                                        natural de serotonina, melhora do
-                                        humor e qualidade do sono REM</p>
+                                    <h4 class="ingredient-name">Vitamina B6 (Piridoxina)<span
+                                            class="ingredient-dose">(1,3mg)</span></h4>
+                                    <p class="ingredient-benefit">
+                                        Melhora na produção de serotonina e melatonina, potencializando o relaxamento e
+                                        a qualidade do sono.
+                                    </p>
                                 </div>
                                 <span class="ingredient-toggle">+</span>
                             </button>
                             <div class="ingredient-details hidden">
                                 <p><strong>Comprovação Científica:</strong>
-                                    Precursor direto da serotonina, aumenta
-                                    sono profundo em 25% segundo estudos da
-                                    Universidade de Stanford</p>
+                                    A vitamina B6 é essencial na conversão do triptofano em serotonina e melatonina,
+                                    otimizando o processo natural de relaxamento.
+                                </p>
                             </div>
                         </div>
 
-                        <div class="ingredient-item">
-                            <button class="ingredient-header" onclick="toggleIngredient(4)">
-                                <div class="ingredient-info">
-                                    <h4 class="ingredient-name">GABA <span class="ingredient-dose">(750mg)</span></h4>
-                                    <p class="ingredient-benefit">Desligamento
-                                        da mente hiperativa, relaxamento
-                                        cerebral profundo</p>
-                                </div>
-                                <span class="ingredient-toggle">+</span>
-                            </button>
-                            <div class="ingredient-details hidden">
-                                <p><strong>Comprovação Científica:</strong>
-                                    Principal neurotransmissor inibitório do
-                                    cérebro, reduz atividade neural
-                                    excessiva que causa insônia</p>
-                            </div>
-                        </div>
+
                     </div>
 
                     <div class="solution-cta">
@@ -655,7 +642,7 @@
                         <div class="sonodol-step-number">1</div>
                         <div class="sonodol-step-content">
                             <h4>PASSO 1</h4>
-                            <p>Coloque 2 gotas do SONODOL sob a língua</p>
+                            <p>Coloque 12 gotas do SONODOL sob a língua</p>
                         </div>
                     </div>
 
@@ -663,7 +650,7 @@
                         <div class="sonodol-step-number">2</div>
                         <div class="sonodol-step-content">
                             <h4>PASSO 2</h4>
-                            <p>Aguarde 60 segundos para absorção
+                            <p>Aguarde 30 segundos para absorção
                                 completa</p>
                         </div>
                     </div>
@@ -830,7 +817,7 @@
                             <td class="sonodol-comparison-sonodol-cell">
                                 <span class="sonodol-comparison-icon-positive">✅</span>
                                 <strong>MELHORA</strong><br>
-                                L-Teanina aumenta foco e clareza mental
+                                Magnésio Bisglicinato aumenta foco e clareza mental
                             </td>
                             <td class="sonodol-comparison-controlled-cell">
                                 <span class="sonodol-comparison-icon-negative">❌</span>
@@ -930,7 +917,7 @@
                             <li><span class="sonodol-comparison-icon-positive">✅</span>
                                 Livre de dependência</li>
                             <li><span class="sonodol-comparison-icon-positive">✅</span>
-                                Mesma dose sempre (2 gotas)</li>
+                                Mesma dose sempre (12 gotas)</li>
                             <li><span class="sonodol-comparison-icon-positive">✅</span>
                                 Memória restaurada</li>
                             <li><span class="sonodol-comparison-icon-positive">✅</span>
@@ -1011,7 +998,7 @@
             <div class="sonodol-comparison-testimonials">
                 <div class="sonodol-comparison-testimonial-card">
                     <div class="sonodol-comparison-testimonial-content">
-                        "Tomei Rivotril por 3 anos. Comecei com 0,5mg, terminei tomando 4mg por noite. Com SONODOL, 2
+                        "Tomei Rivotril por 3 anos. Comecei com 0,5mg, terminei tomando 4mg por noite. Com SONODOL, 12
                         gotas bastam e nunca precisei aumentar."
                     </div>
                     <div class="sonodol-comparison-testimonial-author">-
@@ -1130,7 +1117,7 @@
                 </div>
 
                 <div class="sunodol-product-image">
-                    <img src="images/3-+-1 (1).png" alt="4 Months Treatment" class="sunodol-image">
+                    <img src="images/3-+-1-novo (1).png" alt="4 Months Treatment" class="sunodol-image">
                 </div>
 
                 <div class="sunodol-pricing">
@@ -1161,7 +1148,8 @@
                 </div>
 
                 <div class="sunodol-product-image">
-                    <img src="images/03-PRODUTO.png" alt="1 Month Treatment" class="sunodol-image">
+                    <img src="images/03-PRODUTO.png" alt="1 Month Treatment" class="sunodol-image" style="width: 7rem !important;transform:
+                    scale(2);">
                 </div>
 
                 <div class="sunodol-pricing">
@@ -1213,7 +1201,7 @@
                     <img src="images/garantia-90-dias.webp" alt="90 Dias de Garantia" class="badge-image"
                         style=" width: 96px; height: 96px;object-fit: contain;">
                     <div class="badge-text">
-                        <div class="badge-title">DIAS DE GARANTIA</div>
+                        <div class="badge-title">90 DIAS DE GARANTIA</div>
                         <div class="badge-subtitle">Risco Zero para Você</div>
                     </div>
                 </div>
@@ -1261,7 +1249,7 @@
                     </div>
                     <div class="trust-badge">
                         <div class="badge-icon">
-                            <img src="images/capelo-logo.png" style="width: 5rem;" />
+                            <img src="images/cap-logo.jpg" style="width: 5rem;" />
                         </div>
                         <h4 class="badge-name">Testado em Universidades</h4>
                         <p class="badge-description">Validado por Harvard,
@@ -1309,7 +1297,7 @@
                     </div>
                     <div class="security-item">
                         <div class="security-icon">
-                             <img src="images/Entrega Garantida.png" style="width: 2.6rem;" />
+                            <img src="images/Entrega Garantida.png" style="width: 2.6rem;" />
                         </div>
                         <h4 class="security-name">Entrega Garantida</h4>
                         <p class="security-description">Receba em 3-7 dias
@@ -1493,7 +1481,8 @@
             </div>
 
             <div class="modal-actions">
-                <button class="accept-offer-btn" onclick="window.open('https://pay.braip.co/checkout/plakgqxg/chen8n75?currency=BRL', '_blank')">
+                <button class="accept-offer-btn"
+                    onclick="window.open('https://pay.braip.co/checkout/plakgqxg/chen8n75?currency=BRL', '_blank')">
                     SIM! QUERO O DESCONTO DE R$ 29,10
                 </button>
                 <button class="decline-offer-btn" onclick="closeExitModal()">
