alteracao na foto de como usar

--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                 <!-- Right Column - Medical Illustration -->
                 <div class="sonodol-illustration-container">
                     <div class="sonodol-medical-illustration">
-                        <img src="images/imgDiferencial.webp"
+                        <img src="images/como-usar.jpeg"
                             alt="Ilustração médica mostrando a absorção sublingual do SONODOL"
                             class="sonodol-medical-image" />
                     </div>
